@@ -1,6 +1,7 @@
 Mac OS X
 * missing libtoolize
 * building multiple architecture binaries
+* building bdemount with OSXFuse
 
 
 Missing libtoolize
@@ -16,4 +17,14 @@ make
 make install
 
 The binaries are installed in $PWD/macosx/tmp/
+
+
+Building bdemount with OSXFuse
+
+Install OSXFuse
+http://osxfuse.github.com/
+
+./configure --with-libfuse=/usr/local/
+make
+sudo make install
 
